# duet

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  PERMISSIONS-DS4F.md  PERMISSIONS-comparison.md  PERMISSIONS.md  PLAN.md  README.md  build.rs  dep-licenses.txt
licenses/: deps.txt  included.txt
src/: actions.rs  cli.rs  commands.rs  io_wrappers.rs  main.rs  orchestrator.rs  performance.rs  profile.rs  remote.rs  resolution.rs  rpc.rs  rustsync.rs  scan.rs  state.rs  sync.rs  sync_error.rs  utils.rs
src/scan/: change.rs  location.rs  mod.rs
tests/: local_sync.rs  permission_failures.rs
