[package]
name = "duet"
version = "0.1.0"
authors = ["Dmitriy Morozov <dmitriy@mrzv.org>"]
edition = "2018"
license = "MIT"
description = "bi-directional synchronization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap  = "2.33.3"
colored = "2.0.0"
shellexpand = "2.1.0"
color-eyre = "0.5.10"
log = "0.4.11"
env_logger = "0.8.2"
machine-uid = "0.2.0"
tokio = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.128", features = ["derive"] }
bincode = "1.3.3"
#essrpc = { version = "0.3.0", features = ["async_client", "bincode_transport"] }
essrpc = { path = "../Upstream/essrpc/essrpc", features = ["async_client", "bincode_transport"] }
futures = "0.3.16"
