[package]
name = "duet"
version = "0.1.0"
authors = ["Dmitriy Morozov <dmitriy@mrzv.org>"]
repository = "https://github.com/mrzv/duet/"
edition = "2018"
license = "MIT"
description = "bi-directional synchronization"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
shellexpand = "2.1.0"
color-eyre = "0.5.10"
log = "0.4.11"
env_logger = "0.8.2"
machine-uid = "0.2.0"
tokio = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.128", features = ["derive"] }
bincode = "1.3.3"
#essrpc = { version = "0.3.1", features = ["async_client", "bincode_transport"] }
#essrpc = { git = "https://github.com/Electron100/essrpc", branch = "async", features = ["async_client", "bincode_transport"] }
essrpc = { path = "../Upstream/essrpc/essrpc", features = ["async_client", "bincode_transport"] }
futures = "0.3.16"
filetime = "0.2.15"
text_io = "0.1.9"
dialoguer = "0.8.0"
console = "0.14.1"
regex = "1.5.4"
fnmatch-regex = "0.1.0"
adler32 = "1.2.0"
atomicwrites = "0.3.0"
readwrite = { version = "0.2.0", features = ["asyncstd"] }
tokio-util = { version = "0.6", features = ["compat"] }
openssh = "0.8.1"
simple-logging = "2.0.2"
async-recursion = "0.3.2"
async-std = "1.10.0"
chrono = "0.4.19"
byte-unit = "4.0.12"
unix_mode = "0.1.2"
path-clean = "0.1.0"
pico-args = { version = "0.4.2", features = ["combined-flags"] }
quit = "1.1.4"
ctrlc = "3.2.0"
blake2-rfc = "0.2.18"
serde_derive = "1.0.130"
indicatif = "0.16.2"

[build-dependencies]
built = "0.5.1"
