[package]
name = "duet"
version = "0.3.0"
authors = ["Dmitriy Morozov <dmitriy@mrzv.org>"]
repository = "https://github.com/mrzv/duet/"
edition = "2018"
license = "MIT"
description = "bi-directional synchronization"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
shellexpand = "3.1.1"
color-eyre = "0.6.3"
log = "0.4.27"
env_logger = "0.11.8"
machine-uid = "0.5.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["std","serde"] }
essrpc = { version = "0.4.1", features = ["async_client", "bincode_transport"] }
futures = "0.3.31"
filetime = "0.2.25"
text_io = "0.1.13"
dialoguer = "0.11.0"
console = "0.15.11"
regex = "1.11.1"
fnmatch-regex = "0.2.1"
adler32 = "1.2.0"
atomicwrites = "0.4.4"
readwrite = { version = "0.2.0", features = ["tokio"] }
openssh = "0.11.5"
simple-logging = "2.0.2"
async-recursion = "1.1.1"
async-std = "1.13.1"
chrono = "0.4.40"
byte-unit = "5.1.6"
unix_mode = "0.1.4"
path-clean = "1.0.1"
pico-args = { version = "0.5.0", features = ["combined-flags"] }
quit = "2.0.0"
ctrlc = "3.4.6"
blake2-rfc = "0.2.18"
serde_derive = "1.0.219"
indicatif = "0.17.11"

[build-dependencies]
built = { version = "0.7.7", features = ["cargo-lock"] }
